Refactor historical timetable